--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bare-test = "0.0.5"
 log = "0.4"
+tock-registers = "0"
+
+[dev-dependencies]
+bare-test = "0.0.5"
 
 [build-dependencies]
 sparreal-macros = "0.0.5"
